--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -25,10 +24,6 @@
 		</div>
 {% endblock mainmenu %}
 
-
-<table class="table-content" border=0 cellpadding="0" cellspacing="0">
-<tr>
-<td valign="top" class="content">
 <!-- Блок контента -->
 	<div class="content-text">
 {% block content %}
@@ -36,7 +31,7 @@
 	</div>
 <!-- Конец блока контента -->
 
-</td></tr></table>
+</tr></table>
 </td></tr>
 </body>
 </html>
