--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -5,17 +5,19 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Вход</legend>
+                <legend class="border-bottom mb-4">Регистрация</legend>
                 {{ form.as_p }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Войти</button>
+                <button class="btn btn-outline-info" type="submit">Регистрация</button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Нужен аккаунт? <a class="ml-2" href="{% url 'register' %}">Регистрация</a>
+                Уже есть аккаунт? <a class="ml-2" href="{% url 'login' %}">Вход</a>
             </small>
         </div>
     </div>
+
+
 {% endblock content %}
