--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,23 +1,15 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
-    <div class="content-section">
-        <form method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Регистрация</legend>
-                {{ form.as_p }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Регистрация</button>
-            </div>
-        </form>
-        <div class="border-top pt-3">
-            <small class="text-muted">
-                Уже есть аккаунт? <a class="ml-2" href="{% url 'login' %}">Вход</a>
-            </small>
-        </div>
-    </div>
+<h1>{{ Регистрация }}</h1>
 
+<form method="POST">
+    {% csrf_token %}
+    <input type="hidden" name="next" value="{{ next }}" />
 
-{% endblock content %}
+    <div class="form-error">{{ form.non_field_errors }}</div>
+    {{ form.as_p }}
+
+    <button type="submit">Войти</button>
+</form>
+{% endblock %}
